# hermitcrab

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANUAL_TESTING_LEARNING_QUALITY.md  MEMORY_REFACTOR_SUMMARY.md  MEMORY_SCHEMA_AUDIT.md  QWEN_NOSTR_REFERENCE.md  README.md  RELEASE_NOTES_v0.1.0a4.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
docs/: README.md  changelog.md  index.md
docs/developer-guide/: agent-loop.md  architecture.md  contributing.md  extending-tools.md  gateway-routing.md  memory-and-session.md
docs/getting-started/: installation.md  learning-path.md  quickstart.md
docs/operator-guide/: backups-and-recovery.md  gateway-operations.md  incident-playbook.md  observability-audit.md  workspace-model.md
docs/reference/: channel-reference.md  cli-commands.md  config-reference.md  faq.md  skills-catalog.md  tools-reference.md
docs/user-guide/: channels.md  daily-use.md  reminders-and-cron.md  security-and-permissions.md  sessions-and-memory.md  troubleshooting.md
hermitcrab/: __init__.py  __main__.py
hermitcrab/agent/: __init__.py  audit.py  background_jobs.py  background_messages.py  background_task_tracker.py  context.py  distillation.py  distillation_background.py  execution_state.py  journal.py  journal_background.py  knowledge.py  lists.py  loop.py  memory.py  message_preparation.py  onboarding.py  pending_work.py  people.py  prompt_history.py  reflection.py  reminders.py  session_digest.py  session_lifecycle.py  session_recall.py  skill_runtime.py  skills.py  subagent.py  subagent_profiles.py  tool_call_recovery.py  turn_persistence.py  turn_runner.py
hermitcrab/bus/: __init__.py  events.py  queue.py
hermitcrab/channels/: __init__.py  base.py  (+12 more)
scripts/: install.sh
templates/: TOOLS.md
tests/: test_background_messages.py  test_cli_input.py  test_cli_input_minimal.py  test_commands.py  test_consolidate_offset.py  test_cron_commands.py  test_cron_service.py  test_email_channel.py  test_exec_curl.py  test_execution_state.py  test_heartbeat_service.py  test_journal.py  test_loop_resilience.py  test_memory_compat.py  test_memory_consolidation_types.py  test_mochat_channel.py  test_moltchat_channel.py  test_ollama_enhancements.py  test_ollama_routing.py  test_provider_parsing.py  test_reflection.py  test_reflection_promotion.py  test_session_timeout.py  test_subagent.py  test_telegram_channel.py  test_tool_call_recovery.py  test_tool_validation.py
(+102 files in other folders)
