[project]
name = "hermitcrab-ai"
version = "0.1.0a1"
description = "A lightweight, memory-first, Nostr-primary personal AI assistant"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tiago Vasconcelos"},
    {name = "HermitCrab contributors"},
]
keywords = ["ai", "agent", "assistant", "nostr", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "python-telegram-bot>=22.0,<23.0",
    "python-socketio>=5.16.0,<6.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "python-frontmatter>=1.1.0",
    "pynostr>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
hermitcrab = "hermitcrab.cli.commands:app"

[project.urls]
Homepage = "https://github.com/talvasconcelos/hermitcrab"
Repository = "https://github.com/talvasconcelos/hermitcrab"
Documentation = "https://github.com/talvasconcelos/hermitcrab#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermitcrab"]

[tool.hatch.build.targets.wheel.sources]
"hermitcrab" = "hermitcrab"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "hermitcrab/**/*.py",
    "hermitcrab/**/*.md",
    "hermitcrab/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "hermitcrab/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
